[sdist]
formats = gztar

[check-manifest]
ignore =
    *.yml
    *.yaml
    .coveragerc
    docs
    docs/*
    *.enc
    notebooks
    notebooks/*
    tests
    tests/*

[flake8]
max-line-length = 120
select = C,E,F,W,B,B950
ignore = E203, E501, W503
exclude = ragmac_xdem/_version.py


[metadata]
name = ragmac_xdem
description = Scripts to calculate glacier mass balance as part of the IACS RAGMAC Intercomparison experiment.
author = Amaury Dehecq
url = https://github.com/adehecq/ragmac_xdem
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # Don't change this one
    License :: OSI Approved :: MIT License

## Add your email here
author_email = AUTHOR@EMAIL.COM


### make sure to fill in your dependencies!
[options]
install_requires =
    numpy
    scipy
    matplotlib
    toml
    pandas
    dask
    distributed
    # opencv  -> fails with pip error...
    geoutils
    xdem
dependency_links =
    -e "git+https://github.com/GlacioHack/GeoUtils.git#egg=geoutils"
    -e "git+https://github.com/GlacioHack/xdem.git#egg=xdem"

setup_requires=
    setuptools_scm
python_requires = >=3.6
################ Up until here

zip_safe = False
packages = find:
